fix: overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,10 @@
     src: url("/fonts/JuliusSansOne-Regular.ttf");
 }
 
+body {
+    overflow: hidden;
+}
+
 /*:root {*/
 /*  --foreground-rgb: 0, 0, 0;*/
 /*  --background-start-rgb: 214, 219, 220;*/
